Add white-space: pre to the mfile style template

--- a/_layouts/mfile.html
+++ b/_layouts/mfile.html
@@ -2,6 +2,12 @@
 layout: docs
 category: docs
 ---
+<style>
+  article {
+    white-space: pre;
+    font-family: monospace;
+  }
+</style>
 <article>
 <header>
   <h1>{{ page.title }}</h1>
