only apply white-space: pre to paras

--- a/_layouts/mfile.html
+++ b/_layouts/mfile.html
@@ -4,8 +4,10 @@ category: docs
 ---
 <style>
   article {
-    white-space: pre;
     font-family: monospace;
+  }
+  article p {
+    white-space: pre;
   }
 </style>
 <article>
