update docs css

--- a/_layouts/mfile.html
+++ b/_layouts/mfile.html
@@ -4,8 +4,15 @@ category: docs
 ---
 <style>
   article {
-    font-family: monospace;
-  }
+    font-family: "Ubuntu Mono", monospace;
+    font-size: 14px;
+    padding: 8px 15px;
+    margin: 8px -15px;
+    background: #FCFCDC;
+    border-radius: 5px;
+    border: 1px solid #e5e5e5;
+    overflow-x: auto;
+}
   article p {
     white-space: pre;
   }
