update docs css

--- a/_layouts/mfile.html
+++ b/_layouts/mfile.html
@@ -16,6 +16,10 @@ category: docs
   article p {
     white-space: pre;
   }
+
+  article pre {
+    padding: 8px 15px;
+  }
 </style>
 <article>
 <header>
