--- a/_layouts/mfile.html
+++ b/_layouts/mfile.html
@@ -5,12 +5,12 @@ category: docs
 <style>
   article {
     font-family: "Ubuntu Mono", monospace;
-    font-size: 14px;
+    font-size: 12px;
     padding: 8px 15px;
     margin: 8px -15px;
     background: #FCFCDC;
     border-radius: 5px;
-    border: 1px solid #e5e5e5;
+    border: none;
     overflow-x: auto;
 }
   article p {
@@ -18,7 +18,8 @@ category: docs
   }
 
   article pre {
-    padding: 8px 15px;
+    margin: 8px -15px;
+    font-size: 12px;
   }
 </style>
 <article>
