--- a/_layouts/mfile.html
+++ b/_layouts/mfile.html
@@ -15,10 +15,13 @@ category: docs
 }
   article p {
     white-space: pre;
+    color: #000;
   }
 
   article pre {
     font-size: 13px;
+    color: #777;
+    border: none;
   }
 </style>
 <article>
