--- a/_layouts/mfile.html
+++ b/_layouts/mfile.html
@@ -20,7 +20,7 @@ category: docs
 
   article pre {
     font-size: 13px;
-    color: #F9F9B9;
+    background: #F9F9B9;
     border: none;
   }
 </style>
